@@ -201,12 +201,14 @@ x::double>=y::int	= x>=y;
 x::double==y::int	= x==y;
 x::double!=y::int	= x!=y;
 
-/* Logical connectives. Please note that these will be short-circuited only as
-   explicit calls! But we still want them to work if they are applied
-   partially, so we add these rules here. */
+/* Logical connectives and sequences. Please note that these enjoy
+   call-by-name and short-circuit evaluation only as explicit calls! But we
+   still want them to work if they are applied partially, so we add these
+   rules here. */
 
 x::int&&y::int		= x&&y;
 x::int||y::int		= x||y;
+x$$y			= y;
 
 /* Bigint arithmetic. */
 
